<resources>
    <string name="app_name">Lab08</string>
    <string name="editTextAddress">Enter your email address</string>
    <string name="editText">Type email here</string>
    <string name="editTextPass">Type your password:</string>
    <string name="ButtonText">LOGIN</string>
    <string name="textProfile">Your Profile</string>
    <string name="textProfile1">Your name:</string>
    <string name="editTextName">Enter your name</string>
    <string name="EDitTextEnterEmail">Enter your email</string>
    <string name="textYourPicture">Your picture</string>
    <string name="goToChat">Go to chat!</string>
    <string name="sendButton">Send</string>
    <string name="receivedButton">Receive</string>
    <string name="typeHere">Type here</string>
    <string name="are_you_sure_delete">Do you want to delete this?</string>
    <string name="selected_row">The selected row is: </string>
    <string name="database_id_is">The database id is: </string>
    <string name="y">Yes</string>
    <string name="n">No</string>

    <string name="open_weather_forecast">Open Weather Forecast</string>
    <string name="current_temp">Current Temperature:</string>
    <string name="min_temp">Min Temperature:</string>
    <string name="max_temp">Max Temperature:</string>
    <string name="uv">UV:</string>
    <string name="GotoToolbarpage">Go to Toolbar page</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chat_page">Chat Page</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="click_me">Click me</string>

</resources>