<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/choiceCP"
        android:orderInCategory="1"
        android:title="@string/chat_page"
        app:showAsAction="always" />  <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item
        android:id="@+id/choiceWF"
        android:orderInCategory="2"
        android:title="@string/weather_forecast"
        app:showAsAction="always" />  <!-- This uses showAsAction=always, so look at icon= parameter -->

    <item
        android:id="@+id/choiceGBL"
        android:orderInCategory="5"
        android:title="@string/go_back_to_login"
        app:showAsAction="always" />  <!-- This uses showAsAction=always, so look at icon= parameter -->


</menu>